# KIITSniper

./: Cargo.toml  kiit_snapshot.html  readme.md
.github/workflows/: kiitwatcher.yml
src/: main.rs
