[package]
name = "cli-app"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
difference = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
headless_chrome = "1.0"
base64 = "0.21"